--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
+    "react-localization": "^1.0.15",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
